--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       content="Explore multiple patent data sets, create your own query, and export data through the search patents query tool on PatentsView. "
     />
     <meta name="author" content="AIR" />
+
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
+
     <!-- <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700"
       rel="stylesheet"
