querytool sub nav open by default

--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
             animate(bar2, "bar2");
             animate(bar3, "bar3");
           });
+
+          toggle.click() // open menu by default
         })();
         (() => {
           const domain = window.location.hostname;
