--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/headfoot.css" />
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/css/pvqt.css" />
-    <link rel="stylesheet" href="assets/css/prism.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/headfoot.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/pvqt.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/prism.css" />
     <script
       data-main="js/main"
       src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js"
@@ -204,8 +204,7 @@
 
           toggle.click() // open menu by default
         })();
-        (() => {
-          const domain = window.location.hostname;
+        (() => {const domain = window.location.hostname;
           let links = [
             "",
             "https://www.patentsview.org/query/data-dictionary",
