--- a/faqs.html
+++ b/faqs.html
@@ -17,10 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/custom.css" />
-    <link rel="stylesheet" href="assets/css/headfoot.css" />
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/css/pvqt.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/headfoot.cssassets/css/custom.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/headfoot.cssassets/css/headfoot.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/headfoot.cssassets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://datatool.patentsview.org/query/assets/css/headfoot.cssassets/css/pvqt.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -316,7 +316,7 @@
               the designated email address. The email will also include the API
               query used to generate results. If results are not received within
               24 hours, please contact
-              <a href="mailto:cssip@air.org">cssip@air.org</a>.
+              <a href="mailto:contact@patentsview.org">contact@patentsview.org</a>.
             </p>
 
             <h1>Query Builder FAQs</h1>
@@ -518,7 +518,7 @@
                 >PatentsView Bulk Downloads</a
               >
               or via a MySQL database dump upon request to
-              <a href="mailto:cssip@air.org">cssip@air.org</a>.
+              <a href="mailto:contact@patentsview.org">contact@patentsview.org</a>.
             </p>
 
             <h2>
@@ -527,7 +527,7 @@
             </h2>
             <p>
               Please send questions and additional feedback to the PatentsView
-              team at <a href="mailto:cssip@air.org">cssip@air.org</a>.
+              team at <a href="mailto:contact@patentsview.org">contact@patentsview.org</a>.
             </p>
             <br />
             <br />
