--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <!-- Container -->
       <section id="step-by-step-container" class="container"></section>
       <!-- /Container -->
-      <form id="submit" method="post" action="submit.php">
+      <form id="submit" method="post" action="https://querysupport.patentsview.org/submit.php">
         <!--<form id="submit" method="post" action="/query/submit.php">-->
         <input id="q" name="q" type="hidden" />
       </form>
