--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Search Patents With the Query Tool | Data Sets | PatentsView</title>
+    <title>
+      Search Patents With the Query Builder | Data Sets | PatentsView
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Explore multiple patent data sets, create your own query, and export data through the search patents query tool on PatentsView. "
+      content="Explore multiple patent data sets, create your own query, and export data through the search patents query builder on PatentsView. "
     />
     <meta name="author" content="AIR" />
 
@@ -249,7 +251,11 @@
       <!-- Container -->
       <section id="step-by-step-container" class="container"></section>
       <!-- /Container -->
-      <form id="submit" method="post" action="https://querysupport.patentsview.org/submit.php">
+      <form
+        id="submit"
+        method="post"
+        action="https://querysupport.patentsview.org/submit.php"
+      >
         <!--<form id="submit" method="post" action="/query/submit.php">-->
         <input id="q" name="q" type="hidden" />
       </form>
