--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/gh/PatentsView/pv-header-footer/dist20210211-1.js"></script>
 
-    <div
+    <!-- <div
       class="temp-disabled-modal"
       style="
         position: fixed;
@@ -303,7 +303,7 @@
           <a href="mailto:contact@patentsview.org">contact@patentsview.org</a>
           for any needed assistance.
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
