add redirect to https://patentsview.org/querybuilderdown since the tool is down

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript">
+        window.location.href = "https://patentsview.org/querybuilderdown";
+    </script>
+    <meta http-equiv="refresh" content="0; url=https://patentsview.org/querybuilderdown" />
+
     <meta charset="utf-8" />
     <title>
       Search Patents With the Query Builder | Data Sets | PatentsView
